# crew-ai-exercise

./: .gitignore  README.md  RESUME_AGENT.md  main.py  pyproject.toml  requirements.txt  resume-agent.py
db/: chroma.sqlite3
